recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:4: error: not found: value levels
	else {sierpinski(levels-1, length/2)}
                         ^