recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
def aux (level:Int, length:Double)=
	if (level==0) {avance(length)}
	else {sierpinski(levels-1, length/2)}


aux(level,length)
droite(120)
aux(level,length)
droite(120)
aux(level,length)
droite(120)
}




